Had to move memory pool to Shared/Include because of its usage across the interface. Unfortunately because of the fact that packet lists are created on the CPU and then freed in the video system this is needed. One alternative would be to move all code that I've put in the CPU in to the video plugin, however that's a lot of work. I still like the idea of a video plugin just getting a list of packets and not having to touch system memory much or do tight loops. I always want to keep things fairly standard in terms of the interface - right now the new native interface is almost 1:1 with the old managed interface - this means a video plugin can be written to work with both (and thus work with both a managed and unmanaged CPU, keeping everything nice and portable).
The native interface is in the OGL driver. I need to add locking around it so that the worker thread can function properly. Since I'm working so close to the metal here (and by that I mean C and Win32 :) I can just use a critical section and keep things fast. I'd also like to see if I can, from the worker thread, just 'grab' the display lists in one go with some pointer magic and keep the lock for only a few dozen cycles. I think this would be possible as the worker thread just wants the next batch of draw lists and that is like the hardware - once a list is ready, it's gone.

--- a/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
+++ b/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
@@ -303,10 +303,6 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\MemoryPool.h"
-				>
-			</File>
-			<File
 				RelativePath=".\Noxa.Emulation.Psp.Cpu.R4000Ultra.h"
 				>
 			</File>
@@ -401,6 +397,10 @@
 			<Filter
 				Name="Shared"
 				>
+				<File
+					RelativePath="..\Shared\Include\MemoryPool.h"
+					>
+				</File>
 				<File
 					RelativePath="..\Shared\Include\NoxaShared.h"
 					>
