--- a/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
+++ b/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
@@ -275,6 +275,10 @@
 				Name="Shared"
 				>
 				<File
+					RelativePath="..\Shared\Include\MemoryPool.h"
+					>
+				</File>
+				<File
 					RelativePath="..\Shared\Include\NoxaShared.h"
 					>
 				</File>
