Basic OGL stuff setup - now ready for rendering! (I just draw a spinning triangle for now)
Marked a few BIOS functions as atomic - during Sample 3 (NeHe L1) there are no returns to the execution loop - that means that besides the one managed syscall, things stay native. Since that syscall is redundant (it just says 'hey nothing changed, return') I'd like to see about inlining it.

Video drivers can now print stats. I'm not gathering many, but I can at least see the # of processed frames vs. the # of skipped frames. Right now, the ratio is pretty large. Since the video worker is just drawing a triangle right now, I'm hoping this won't be indicitive of the final system. Perhaps it just means that my CPU core runs a lot faster than the PSP - although that is doubtful :)
It could also be that I have some wait logic flipped - maybe the CPU should be waiting more instead of how I currently have the video driver wait.

--- a/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
+++ b/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
@@ -59,7 +59,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(NoInherit)"
+				AdditionalDependencies="$(NoInherit) opengl32.lib glu32.lib user32.lib gdi32.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
@@ -134,7 +134,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(NoInherit)"
+				AdditionalDependencies="$(NoInherit) opengl32.lib glu32.lib user32.lib gdi32.lib"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				TargetMachine="1"
