Added a tracer class in each CPU. It writes out an instruction stream to /Trace-*.txt and is 1000000x faster than Debug::WriteLine. Hopefully this will help me spot a bug that is causing Puzzle Bobble to die early on Ultra (where Dynarec exits cleanly).

--- a/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
+++ b/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
@@ -296,6 +296,14 @@
 					/>
 				</FileConfiguration>
 			</File>
+			<Filter
+				Name="Shared"
+				>
+				<File
+					RelativePath="..\Shared\Source\Tracer.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -403,6 +411,10 @@
 				</File>
 				<File
 					RelativePath="..\Shared\Include\NoxaShared.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Shared\Include\Tracer.h"
 					>
 				</File>
 				<File
