--- a/Noxa.Emulation.Psp.Cpu.R4000DynRec/Noxa.Emulation.Psp.Cpu.R4000DynRec.csproj
+++ b/Noxa.Emulation.Psp.Cpu.R4000DynRec/Noxa.Emulation.Psp.Cpu.R4000DynRec.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Memory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="R4000DynRec.cs" />
+    <Compile Include="Tracer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Noxa.Emulation.Psp\Noxa.Emulation.Psp.csproj">
