Processing skeleton created, and several commands supported. Basic primitives can draw! Unfortunately matrices are messed up and aren't working right - the projection matrix works, however view/model don't. Part of the problem is that view and model are separate, where as they are one in OGL. D3D was easier in this regard.

--- a/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
+++ b/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
@@ -210,6 +210,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\OglDriver_Processing.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\OglDriver_Worker.cpp"
 				>
 			</File>
@@ -249,6 +253,10 @@
 			</File>
 			<File
 				RelativePath=".\OglCapabilities.h"
+				>
+			</File>
+			<File
+				RelativePath=".\OglContext.h"
 				>
 			</File>
 			<File
