Took all the D/I cache invalidation BIOS calls and inlined them to NOPs. I doubt I'll ever use them - I may have to implement the probe/etc methods, though. We'll see if anything uses them.
Now dword align the memory buffers - thinking that dword aligned reads/writes on x86 may be faster than unaligned, and since most MIPS reads/writes are dword aligned it may work out. Either way it can't hurt.

Moved texture stuff in to its own files. Will do the same with vertex buffers/etc later when I get to them.

Now support unswizzling textures! Tricky to implement cause the reference code on the ps2dev wiki didn't work. This means that sample 7 and 8 (NeHe lessons 5 and 6) run without modification.

Just for curiousity I did a release build and ran sample 8 - I got an amazing 197 MIPS! That's certainly faster than a real PSP (at 200MHz, with each instruction taking at best 1 cycle and probably an average of several without counting memory reads/writes, I'm guessing a real PSP runs at about 100 MIPS). Wooo!

Although textures work now, they don't REALLY work - only textures in RGBA 8888 format work. The ps2dev PSPGL code (pspgl_texobj.c) is a good base for what I'll need to do. I wish I would have looked at that before wasting all my time with the other stuff :)

--- a/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
+++ b/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
@@ -222,6 +222,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\OglTextures.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Stdafx.cpp"
 				>
 				<FileConfiguration
@@ -265,6 +269,10 @@
 			</File>
 			<File
 				RelativePath=".\OglStatistics.h"
+				>
+			</File>
+			<File
+				RelativePath=".\OglTextures.h"
 				>
 			</File>
 			<File
