Did a few line fix to GenerateStubs so that the stuff it generates is usable without modification.
Stubbed out 3 modules.

Implemented a few of the set/get frequency functions as NOPs/default returns. Also inlined some of them, as one day they will probably be supported. Also support power callbacks (just reg/unreg, no actual callbacks are made).

Implemented the sceKernelLibc* methods for timing - they probably work... Depending on call frequency these could be inlined.

Unfortunately I'm so late in the game that this is difficult, but it'd be nice to rethink the BIOS format now that I've got a native CPU and also know a lot more. I could also write a better GenerateStubs app (maybe one that looks at the xml instead of requiring so much manual work), and possibly optimize things.

--- a/Noxa.Emulation.Psp.Bios.GenericHle/Noxa.Emulation.Psp.Bios.GenericHle.csproj
+++ b/Noxa.Emulation.Psp.Bios.GenericHle/Noxa.Emulation.Psp.Bios.GenericHle.csproj
@@ -47,9 +47,12 @@
     <Compile Include="Modules\Audio.cs" />
     <Compile Include="Modules\Ctrl.cs" />
     <Compile Include="Modules\DisplayUser.cs" />
+    <Compile Include="Modules\ExceptionManagerForKernel.cs" />
     <Compile Include="Modules\GeUser.cs" />
     <Compile Include="Modules\InterruptManager.cs" />
+    <Compile Include="Modules\KDebugForKernel.cs" />
     <Compile Include="Modules\KernelLibrary.cs" />
+    <Compile Include="Modules\LoadCoreForKernel.cs" />
     <Compile Include="Modules\LoadExecForUser.cs" />
     <Compile Include="Modules\Mpeg.cs" />
     <Compile Include="Modules\Power.cs" />
