MAJOR BREAKING CHANGES
I found out some things... things I should have checked a LONG time ago. Turns out that the calling convention used is NOT the standard I was used to (or read about). I had done everything to support the first 4 arguments going in a0-a3, and the rest spilling in to the stack. Well, in reality its the first 4 in a0-a3, the next 4 in t0-t3, then the rest on the stack. Whoops. There is also the issue of the BIOS methods not supporting 64 bit returns, or 64 bit parameters. Double whoops.

So basically, the whole BIOS is wrong and needs to be thrown away. At least the interface. So once I realized this I took it in stride: an excuse to do things right!

A new BIOS, FastHLE, has been added. It is in C++/CLI (now that I'm used to it I love it), and will support the BiosApi native interface. Since it's still managed I can use the great .NET BCL, while still allowing for native calls. This will be critical for things like the synchronization primitives/etc. Without doing this, I fear I would have ended up putting most of the BIOS in the CPU! In fact, now that the native interface exists, I can undo some of the stuff I did in R4000BiosStubs.cpp and bring the syscalls back in to the BIOS. Some will stay (particularly the inlined ones), but I may even move the video interface out - it really belongs in the BIOS, and there won't be that much of a hit by moving it there (since the new BIOS can use the native video interface too).

Because of the radical changes required to support the newfound calling convention, there is no way to really salvage the existing BIOS. It will be dropped as soon as I move its good code in to the new BIOS (although I do plan to rewrite a lot to make it cleaner).

In stark contrast to the old BIOS call interface (where every BIOS method had the same delegate and a lot of ugly work was required) the new interface is much more natural. Two new helpers (of which only the managed version is implemented) will emit the proper code to c

--- a/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
+++ b/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
@@ -406,6 +406,10 @@
 				Name="Shared"
 				>
 				<File
+					RelativePath="..\Shared\Include\BiosApi.h"
+					>
+				</File>
+				<File
 					RelativePath="..\Shared\Include\MemoryPool.h"
 					>
 				</File>
