Now compile SoftWire with /clr. I'm hoping this will speed up generation time as there won't be a transition on every single instruction emit.
Implemented all of the FastHLE support stuff and kernel code (at least, all that was in the old GenericHle). No actual methods have been implemented, but discovery and such seems to work.

Fixed up the shim generator in the CPU. It can now handle 64 bit parameters, and properly constructs methods to get IModule references. Untested, but probably works. It at least doesn't die on the CreateDelegate!

Had to manually add a few NIDs to some modules. Sucks, but the pspsdk doesn't have them defined so I couldn't automatically get them.

--- a/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
+++ b/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
@@ -202,6 +202,38 @@
 				>
 			</File>
 			<File
+				RelativePath=".\FastBios.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Kernel.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Kernel_Handles.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Kernel_Threads.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\KernelHelpers.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\KernelPartition.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\KernelStatistics.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\KernelThread.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Noxa.Emulation.Psp.Bios.FastHLE.cpp"
 				>
 			</File>
@@ -239,6 +271,62 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\FastBios.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Kernel.h"
+				>
+			</File>
+			<File
+				RelativePath=".\KernelCallback.h"
+				>
+			</File>
+			<File
+				RelativePath=".\KernelDevice.h"
+				>
+			</File>
+			<File
+				RelativePath=".\KernelEvent.h"
+				>
+			</File>
+			<File
+				RelativePath=".\KernelFileHandle.h"
+				>
+			</File>
+			<File
+				RelativePath=".\KernelHandle.h"
+				>
+			</File>
+			<File
+				RelativePath=".\KernelHelpers.h"
+				>
+			</File>
+			<File
+				RelativePath=".\KernelMemoryBlock.h"
+				>
+			</File>
+			<File
+				RelativePath=".\KernelMsgPipe.h"
+				>
+			</File>
+			<File
+				RelativePath=".\KernelPartition.h"
+				>
+			</File>
+			<File
+				RelativePath=".\KernelSemaphore.h"
+				>
+			</File>
+			<File
+				RelativePath=".\KernelStatistics.h"
+				>
+			</File>
+			<File
+				RelativePath=".\KernelThread.h"
+				>
+			</File>
 			<File
 				RelativePath=".\Module.h"
 				>
