--- a/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
+++ b/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
@@ -233,6 +233,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\R4000Cpu_Shim.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\R4000Generator.cpp"
 				>
 			</File>
