Now support kxploited games in the memory stick (where __SCE__* has the real elf named EBOOT.PBP, and %__SCE__* has the real pbp). Not tested, but at least the loader shows now.
Implemented the libc time stuff as well as almost all of the IO functions (at least everything that was implemented before). Current report:
FastBios: found 409 functions in 28 modules. 87 (21.27139%) implemented
Almost 1/4th implemented! Woo! I bet that would go up if I marked the CPU inlined ge user methods as implemented, too.

The NeHe texture sample still doesn't run - need to figure out why.

--- a/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
+++ b/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
@@ -269,6 +269,22 @@
 				Name="Modules"
 				>
 				<File
+					RelativePath=".\Modules\IoFileMgrForUser.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Modules\IoFileMgrForUser_Devices.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Modules\IoFileMgrForUser_Directories.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Modules\IoFileMgrForUser_Files.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\Modules\LoadExecForUser.cpp"
 					>
 				</File>
@@ -302,6 +318,10 @@
 				</File>
 				<File
 					RelativePath=".\Modules\ThreadManForUser_Threads.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Modules\UtilsForUser_Timing.cpp"
 					>
 				</File>
 			</Filter>
