Implemented sceCtrl (needs latches still), and some other dummy functions elsewhere.
Fixed up a lot of the shim generation code - it was pretty wrong. Parameter width determination was also wrong. Now things work great, and the parameters to sceIoLseek that that used to look like garbage now make sense!

Sample 7 and 8 run again. Still have the crazy timing issue though.

GenericHle dropped from solution - the only things it has that the new BIOS is missing are the sceGe_user functions, but those are inlined with the native interface so I don't care.
SoftWire changed back to native code. Even with the native/managed transitions, it runs an order of magnitude faster than the /clr version.

Fixes in gameloader/etc to better support kxploited stuff. It'd be nice if I just had a kxploited flag, but for now I just mangle/demangle directories. It works though!

Added DoubleWord IMemory operations to help cut down on chatter.

Now print out stuff sent to stdout (which I think is file handle 1 - not sure - it could be stderr).

--- a/Dependencies/SoftWire/StaticLibrary-VC8.vcproj
+++ b/Dependencies/SoftWire/StaticLibrary-VC8.vcproj
@@ -25,7 +25,7 @@
 			ConfigurationType="4"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			CharacterSet="2"
-			ManagedExtensions="1"
+			ManagedExtensions="0"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -91,7 +91,7 @@
 			ConfigurationType="4"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			CharacterSet="2"
-			ManagedExtensions="1"
+			ManagedExtensions="0"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -112,12 +112,16 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions=""
 				Optimization="2"
-				InlineFunctionExpansion="1"
+				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
+				WholeProgramOptimization="true"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
 				StringPooling="true"
-				RuntimeLibrary="2"
-				EnableFunctionLevelLinking="true"
+				RuntimeLibrary="0"
+				EnableFunctionLevelLinking="false"
+				EnableEnhancedInstructionSet="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="false"
