--- a/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
+++ b/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
@@ -293,11 +293,23 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Modules\sceCtrl.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\Modules\sceDisplay.cpp"
 					>
 				</File>
 				<File
+					RelativePath=".\Modules\sceGe_user.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\Modules\sceRtc.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Modules\sceUmdUser.cpp"
 					>
 				</File>
 				<File
