Added MADD(U)/MSUB(U) instructions. MUL is there too, but I don't know what table to put it in until I find code that uses it.
Implemented some more BIOS routines. This time MT19937, which I THINK should work - needs testing. MD5/SHA1 files are empty for now. MT19937 is implemented unmanaged, with the managed routines just calling it. This whole set of crypto/hashing/etc routines are perfect for inlining. The guys who wrote MT also have an SSE2 implementation that is supposed to scream, but since its state is different than MT19937 I won't use it for now, unless I find that it gets called A LOT.

Gave IMemory an InternalPointer property. Needed for managed BIOS routines that piggy-back native ones without having to get a CPU instance and such. Eventually I'll have to rename it and probably add FrameBufferPointer/ScratchPointer/etc. Then I'll have to write some managed GetPointer( addr ) that picks the right one and translates it.

IAudioDriver was stubbed. It doesn't do anything for now, but it is enough to mark a few audio calls as implemented so things to fail so badly.

Up to 30% BIOS implementation (that's 129/409 methods). PSPTris has only one unimplemented NID: sceCtrlReadLatch! I'll figure that out later.

Notes for awake self in morning:
The top byte getting is dropped on sw? (or lw?) Or maybe something is overwritting the memory address (this is in stack land, so its possible)
check:
 895cd60:	afbf000c 	sw	ra,12(sp)
	should store 08961B58
 895ce68:	8fbf000c 	lw	ra,12(sp)
	should load that, but loads 00961B58
I'll need to do a review of my code to see if anything inbetween the sw and lw writes to that memory, possibly even adding some new diagnostic tools for memory debugging (break on access, break on write, print writes, etc).
This is preventing PSPTris from getting past the startup stage. It may also be the cause of other issues.

Another bug: Kernel::ClockTime seems to return 0xFFFFFFFF sometimes - or at least I get this:
UtilsForUser::sceKernelLibcTime(

--- a/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
+++ b/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
@@ -293,6 +293,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Modules\sceAudio.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\Modules\sceCtrl.cpp"
 					>
 				</File>
@@ -330,6 +334,22 @@
 				</File>
 				<File
 					RelativePath=".\Modules\ThreadManForUser_Threads.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Modules\UtilsForUser.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Modules\UtilsForUser_MD5.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Modules\UtilsForUser_MT19937.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Modules\UtilsForUser_SHA1.cpp"
 					>
 				</File>
 				<File
