Some crazy fixes here! Added argument passing to the game - just pass the game path for now (I think that's right). Need to run stuff on the psp to see what the real one gives. Turns out I was starting elfs at the wrong address! This may have been messing things up, but certainly was messing up the new support for the new arguments.
libc timing routines now just call the libc functions.

With these changes, PSPTris runs until it tries to load a png and libpng fails with this error:
libpng error: [49][48][44][52]: CRC error
That is the IDAT chunk header, so I'm not sure what its bitching about. Will need to investigate.

--- a/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
+++ b/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
@@ -119,6 +119,7 @@
 				AdditionalIncludeDirectories="$(SolutionDir)Shared\Include"
 				PreprocessorDefinitions="WIN32;NDEBUG"
 				RuntimeLibrary="2"
+				BufferSecurityCheck="false"
 				UsePrecompiledHeader="2"
 				WarningLevel="3"
 				DebugInformationFormat="3"
