--- a/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
+++ b/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
@@ -119,6 +119,7 @@
 				AdditionalIncludeDirectories="&quot;$(SolutionDir)Shared\Include&quot;; $(ProjectDir)\"
 				PreprocessorDefinitions="WIN32;NDEBUG"
 				RuntimeLibrary="2"
+				BufferSecurityCheck="false"
 				UsePrecompiledHeader="2"
 				WarningLevel="3"
 				DebugInformationFormat="3"
