Added GL/WGL extension headers. Added GL extensions helper file for pulling out needed extensions. The video driver now depends on a few of these extensions. The tests are not yet set up in the Test() routine - it would be good to have this. I require OpenGL 1.2 min, and maybe higher. For now I'll say I require whatever video card I have ;)
Tuned up the CPU a bit after reading some perf recommendations.

Refactored IMemorys InternalPointer and gave access to the frame buffer pointer. Frame buffer accesses are also now supported for inline memory access. The video plugin can handle texture and vertex/index buffer reads from the frame buffer memory.

The video driver now supports various blending modes, properly supports texture enabled states, and has a much better texture backend. It may now be able to handle formats other than RGBA8888 (they are untested), and maybe even DXT formats.

With this update, the PSPTris menu looks sexy. There are some glitches in the textures (banding), but hopefully something I can fix.

--- a/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
+++ b/Noxa.Emulation.Psp.Video.OpenGL/Noxa.Emulation.Psp.Video.OpenGL.vcproj
@@ -219,6 +219,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\OglExtensions.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\OglStatistics.cpp"
 				>
 			</File>
@@ -266,6 +270,10 @@
 			</File>
 			<File
 				RelativePath=".\OglDriver.h"
+				>
+			</File>
+			<File
+				RelativePath=".\OglExtensions.h"
 				>
 			</File>
 			<File
