New unmanaged hashtable. Removed InternalMemory supported flag in CPU caps, as all CPUs must support it.
Just did a massive revert after moving all generation functions to unmanaged code and finding that there was 0 speed up (and in some cases, things were slower). Go figure.

--- a/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
+++ b/Noxa.Emulation.Psp.Cpu.R4000Ultra/Noxa.Emulation.Psp.Cpu.R4000Ultra.vcproj
@@ -304,6 +304,10 @@
 				Name="Shared"
 				>
 				<File
+					RelativePath="..\Shared\Source\HashTable.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\Shared\Source\Tracer.cpp"
 					>
 				</File>
@@ -411,6 +415,10 @@
 				>
 				<File
 					RelativePath="..\Shared\Include\BiosApi.h"
+					>
+				</File>
+				<File
+					RelativePath="..\Shared\Include\HashTable.h"
 					>
 				</File>
 				<File
