Fixes to and integration of the new CodeGen library. Everything seems to work (exceptions are all the NeHe untextured samples - apparently video is broken with no textures!). Generation is now an order of magnitude faster, although still not that fast. There is probably a lot of stuff outside of CodeGen that can be sped up (advanced block builder). I may also implement the basic block builder to see how it fares. I can also implement an interpreter and offload generation in to the background.

--- a/Noxa.Emulation.Psp.CodeGen/Noxa.Emulation.Psp.CodeGen.vcproj
+++ b/Noxa.Emulation.Psp.CodeGen/Noxa.Emulation.Psp.CodeGen.vcproj
@@ -46,7 +46,8 @@
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
-				BufferSecurityCheck="false"
+				BufferSecurityCheck="true"
+				EnableFunctionLevelLinking="true"
 				EnableEnhancedInstructionSet="2"
 				UsePrecompiledHeader="2"
 				WarningLevel="3"
