Project changes for release builds.
WOW. In release mode, PSPTris has almost no generation time. It's as fast from the time you click play to the time the blocks fall as a real PSP. Just... WOW.

--- a/Noxa.Emulation.Psp.CodeGen/Noxa.Emulation.Psp.CodeGen.vcproj
+++ b/Noxa.Emulation.Psp.CodeGen/Noxa.Emulation.Psp.CodeGen.vcproj
@@ -107,7 +107,9 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="1"
 				AdditionalIncludeDirectories="&quot;$(SolutionDir)\Shared\Include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
 				RuntimeLibrary="2"
