A bunch of BIOS functions (native implementations of sceRtc methods, a few sceUmdUser methods, interrupt management stuff).
The CPU now has some accessors for the interrupt state, and MFIC/MTIC are implemented. No interrupts are actually issued, though. There needs to be a fast way for parts of the emulator to dispatch the handlers. For example, VBLANK seems to be hooked a lot, so maybe the video api should have a way to call in to the bios and say 'hey, call this interrupt quickly'. The problem is that context switches are so expensive now - I want to make them faster, but I also will have to make it so that they aren't required for interrupt execution. I may need some sort of 'light context switch' that just sets the state to something and runs the code.

Fixed ElfFile so that it actually tells when it needs relocations properly (it's not the right way, but it seems a bit better).

With these changes, PB runs now much further than before, stopping at a CLZ (unimplemented). I played the Japanese demo of Jeanne D'Arc today and fell in love, so I tried that and am able to get up until it issues a sceKernelCreateFpl (allocate a fixed block) - I'll see about implementing that now.

--- a/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
+++ b/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
@@ -270,6 +270,28 @@
 				Name="Modules"
 				>
 				<File
+					RelativePath=".\Modules\InterruptManager.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							ObjectFile="$(IntDir)\$(InputName)1.obj"
+							XMLDocumentationFileName="$(IntDir)\$(InputName)1.xdc"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Release|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							ObjectFile="$(IntDir)\$(InputName)1.obj"
+							XMLDocumentationFileName="$(IntDir)\$(InputName)1.xdc"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
 					RelativePath=".\Modules\IoFileMgrForUser.cpp"
 					>
 				</File>
@@ -284,6 +306,28 @@
 				<File
 					RelativePath=".\Modules\IoFileMgrForUser_Files.cpp"
 					>
+				</File>
+				<File
+					RelativePath=".\Modules\Kernel_Library.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							ObjectFile="$(IntDir)\$(InputName)1.obj"
+							XMLDocumentationFileName="$(IntDir)\$(InputName)1.xdc"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Release|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							ObjectFile="$(IntDir)\$(InputName)1.obj"
+							XMLDocumentationFileName="$(IntDir)\$(InputName)1.xdc"
+						/>
+					</FileConfiguration>
 				</File>
 				<File
 					RelativePath=".\Modules\LoadExecForUser.cpp"
@@ -394,6 +438,10 @@
 			</File>
 			<File
 				RelativePath=".\KernelHelpers.h"
+				>
+			</File>
+			<File
+				RelativePath=".\KernelInterruptHandler.h"
 				>
 			</File>
 			<File
