--- a/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
+++ b/Noxa.Emulation.Psp.Bios.FastHLE/Noxa.Emulation.Psp.Bios.FastHLE.vcproj
@@ -382,6 +382,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Modules\ThreadManForUser_Time.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\Modules\UtilsForUser.cpp"
 					>
 				</File>
